# synthetic-indices-bot

./: .env.example  .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  GITHUB_SETUP.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: PHASE1_MONITORING.md  PHASE2_HARDENING.md  SPEC.md  TRADINGVIEW_MAPPING.md
pine/: mean_reversion_v0.pine
scripts/: remote_add_origin.sh
sidx/: __init__.py  alerts.py  config.py  execution.py  indicators.py  logging_utils.py  risk.py  state_store.py  strategy.py  trade_manager.py
sidx/bot/: __init__.py  run_paper.py
sidx/data/: __init__.py  candles.py  deriv_ws.py  live_buffer.py  ticks_history.py
sidx/monitor/: __init__.py  dashboard.py
sidx/research/: __init__.py  run_backtest.py  simulation.py  walk_forward.py
testdata/: sample_ticks.csv
